--- a/Front/src/app/home/home.component.html
+++ b/Front/src/app/home/home.component.html
@@ -1,19 +1,149 @@
-<div class="container-fluid mx-auto my-3" *ngFor="let publicacion of posts">
-    <mat-card class="example-card">
-        <mat-card-header>
-            <div mat-card-avatar class="example-header-image" style="cursor: pointer;"></div>
-            <mat-card-title style="cursor: pointer;">{{ publicacion.usuario?.nombres }} {{ publicacion.usuario?.apellidos }}</mat-card-title>
-            <mat-card-subtitle>{{ publicacion.fecha | date:"fullDate" }}</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-        <mat-card-content>
-            <p>
-                {{ publicacion.contenido }}
-            </p>
-        </mat-card-content>
-        <mat-card-actions>
-            <button mat-button *ngIf="publicacion.meGusto" style="font-family: Segoe UI Emoji;">&#10084; {{ publicacion.meGusta?.length }} Me gusta</button>
-            <button mat-button *ngIf="!publicacion.meGusto">&#10084; {{ publicacion.meGusta?.length }} Me gusta</button>
-        </mat-card-actions>
-    </mat-card>
+<app-post></app-post>
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark" aria-label="Third navbar example">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/landing">{{ titulo }}</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
+            aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--             
+            <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+            <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+                integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+                crossorigin="anonymous" /> -->
+        </head>
+
+
+        <div class="collapse navbar-collapse" id="navbarsExample03">
+            <ul class="navbar-nav me-auto mb-2 mb-sm-0">
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/perfil/', usuario.idusr]">Mi perfil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/home">Inicio</a>
+                </li>
+            </ul>
+            <button class="btn btn-secondary" type="button" data-bs-target="#myModalbuscar" data-bs-toggle="modal">
+                <i class="fas fa-search icon"></i>
+                Buscar</button>
+
+            <div class="btn-group">
+                <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
+                    data-bs-display="static" aria-expanded="false">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-person" viewBox="0 0 16 16">
+                        <path
+                            d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
+                    </svg>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-lg-end">
+                    <li><a class="dropdown-item" [routerLink]="['/perfil/', usuario.idusr]">Mi perfil</a></li>
+                    <li><a class="dropdown-item" (click)="cerrarSesion()">Cerrar Sesión</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<div class="container-fluid center my-3 pb-5">
+
+
+    <div class="centrar">
+
+        <div class="contenedor-sesion">
+            <div class="seccion">
+                <div class="titulo-seccion">
+                </div>
+                <button (click)="abrirModal()" type="button" class="btn btn-outline-primary">
+                    <i class="fa fa-pen"></i>
+                    ¿Qué estás pensando, amigo?
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <div class="container my-3 mx-auto" *ngFor="let publicacion of posts">
+        <div class="centrar">
+            <mat-card class="example-card">
+                <mat-card-header>
+                    <img mat-card-avatar class="example-header-image" src="{{ publicacion.usuario.img }}" [routerLink]="['/perfil/', publicacion.usuario.idusr]" style="cursor: pointer;"/>
+                    <mat-card-title style="cursor: pointer;" [routerLink]="['/perfil/', publicacion.usuario.idusr]"> {{
+                        publicacion.usuario?.apodo }}</mat-card-title>
+                    <mat-card-subtitle>{{ publicacion.fecha | date:"fullDate" }}</mat-card-subtitle>
+                </mat-card-header>
+                <img mat-card-image src="{{ publicacion.img }}"
+                    alt="Contenido">
+                <mat-card-content>
+                    <p>
+                        {{ publicacion.contenido }}
+                    </p>
+                </mat-card-content>
+                <mat-card-actions>
+                    <button (click)="darLikePost(publicacion.usuario.idusr, publicacion.id)" mat-button *ngIf="publicacion.meGusto" style="font-family: Segoe UI Emoji;">&#10084; {{
+                        publicacion.meGusta?.length }} Me gusta</button>
+                    <button (click)="darLikePost(publicacion.usuario.idusr, publicacion.id)" mat-button *ngIf="!publicacion.meGusto">&#10084; {{ publicacion.meGusta?.length }} Me
+                        gusta</button>
+                </mat-card-actions>
+            </mat-card>
+        </div>
+    </div>
+    <div class="col-md-12 text-center">
+        <span>
+            &copy; 2022 SpaceTime, Inc.
+        </span>
+    </div>
 </div>
+
+
+<head>
+    <style>
+        .modal-header {
+            background: #bbbbbb;
+            color: rgb(0, 0, 0);
+        }
+    </style>
+</head>
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+</head>
+
+<body>
+    <div class="modal" id="myModalbuscar">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title">Buscar Personas</h1>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label class="form-label">¿A quién deseas buscar?</label>
+                            <input type="text" class="form-control">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#secondModal"
+                        data-bs-dismiss="modal">Guardar</button>
+                    <button class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
+</body>
