--- a/Front/src/app/landing/landing.component.html
+++ b/Front/src/app/landing/landing.component.html
@@ -1,8 +1,29 @@
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark" aria-label="Third navbar example">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/landing">{{ titulo }}</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExample03">
+        <ul class="navbar-nav me-auto mb-2 mb-sm-0">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/creadores">Creadores</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.umg.edu.gt/">Universidad</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
 <html>
 <body>
+  <div class="container my-3 pb-5">
     <div class="container">
         <main class="row mb-4 shadow">
-            <div class="col-md-6 text-center">
+            <div class="col-md-6 text-center shadow">
                 <img src="./assets/Space.png" id="main-image">
             </div>
             <div class="col-md-6 my-auto">
@@ -37,12 +58,12 @@
                   <p>Puedes editar tu perfil, desde tus datos personales hasta tu foto de perfil.
                  </p>
             </div>
-            <div class="col-md-6 text-center">
+            <div class="col-md-6 text-center shadow">
                 <img src="./assets/post.png" id="main-image">
             </div>
 
 
-            <div class="col-md-6 text-center">
+            <div class="col-md-6 text-center shadow">
                 <img src="./assets/personas.png" id="main-image">
             </div>
             <div class="col-md-6 text-center my-auto">
@@ -59,13 +80,7 @@
             © 2022 SpaceTime, Inc.
         </span>
     </div>
-   
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
-        integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
-        crossorigin="anonymous"></script>
+      </div>
 </body>
 
 </html>
