--- a/Front/src/app/login/login.component.html
+++ b/Front/src/app/login/login.component.html
@@ -1,105 +1,150 @@
-<html lang="en">
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark" aria-label="Third navbar example">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/landing">{{ titulo }}</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
+            aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarsExample03">
+            <ul class="navbar-nav me-auto mb-2 mb-sm-0">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/creadores">Creadores</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.umg.edu.gt/">Universidad</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<html>
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apock web design</title>
+    <title>SpaceTime</title>
     <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 
 <body>
-    <div class="body-contenedor">
-        <div class="contenedor-sesion">
-            <div class="seccion">
-                <div class="titulo-seccion">
-                    <h5>Registrar</h5>
-                </div>
-                <form autocomplete="off" class="form-secion" action="#" method="post" accept-charset="utf-8">
-                    <div class="mb-3">
-                        <div class="form-input">
-                            <input class="form-control" type="text" placeholder="Nombre" pattern="[A-Za-z0-9 ]{1,30}">
-                            <div class="icono">
-                                <i class="fas fa-user"></i>
+    <div class="container my-3 pb-5">
+        <div class="body-contenedor">
+            <div class="contenedor-sesion">
+                <div class="seccion">
+                    <div class="titulo-seccion">
+                        <h5>Registrar</h5>
+                    </div>
+
+                    <div class="text-center">
+                        <p>¿No tienes una cuenta? Registrate ahora</p>
+                    </div>
+                    <form autocomplete="off" class="form-secion" accept-charset="utf-8">
+
+                        <div class="form-floating mb-3">
+                            <input [(ngModel)]="usuarioRegistro.nombre" type="text" class="form-control" id="floatingInput" placeholder="Nombre"
+                                pattern="[A-Za-z0-9 ]{1,30}" name="names">
+
+                            <label for="floatingInput">
+                                <i class="icono" class="fas fa-user"></i>
+                                Nombre completo
+                            </label>
+                        </div>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">@</span>
+                            <div class="form-floating">
+                                <input [(ngModel)]="usuarioRegistro.apodo" type="text" class="form-control" id="floatingInputGroup1" placeholder="Username" name="apodo">
+                                <label for="floatingInputGroup1">Nombre de Usuario</label>
                             </div>
                         </div>
-                    </div>
-                    <div class="form-input">
-                        <input class="form-control" type="email" placeholder="Correo Electrónico">
-                        <div class="icono">
-                            <i class="fas fa-envelope"></i>
+
+                        <div class="form-floating mb-3">
+                            <input [(ngModel)]="usuarioRegistro.fechanac" type="date" class="form-control" id="floatingInput"
+                                placeholder="Fecha de Nacimiento" name="fecha">
+                            <label for="floatingInput">
+                                Fecha de Nacimiento</label>
                         </div>
-                    </div>
-                    <div class="form-input">
-                        <input class="form-control" type="password" placeholder="Contraseña" minlength="8">
-                        <div class="icono">
-                            <i class="fas fa-unlock"></i>
+
+                        <div class="form-floating mb-3">
+                            <input [(ngModel)]="usuarioRegistro.correo" type="email" class="form-control" id="floatingInput"
+                                placeholder="Correo Electrónico" name="email">
+                            <label for="floatingInput">
+                                <i class="icono" class="fas fa-envelope"></i>
+                                Correo Electrónico</label>
                         </div>
-                    </div>
-                    <div class="form-input">
-                        <input class="form-control" type="password" placeholder="Confirmar Contraseña" minlength="8">
-                        <div class="icono">
-                            <i class="fas fa-unlock"></i>
+
+                        <div class="form-floating">
+                            <input [(ngModel)]="usuarioRegistro.pswd" type="password" class="form-control" id="floatingPassword" 
+                                placeholder="Contraseña" name="pasword">
+                            <label for="floatingPassword">
+                                <i class="icono" class="fas fa-unlock"></i>
+                                Contraseña</label><br>
                         </div>
-                    </div>
-                    <div class="form-boton">
-                        <button type="submit" class="btn-form registro">
-                            Registrar
-                        </button>
-                    </div>
-                </form>
-                <!-- cambia el color de la carta con acierto, alerta y peligro -->
-                <!-- <div class="carta-seccion acierto">
-                El usuario o contraseña es incorrecto
-            </div> -->
-            </div>
-            <div class="divisor">
-                <div class="contenedor-icono">
-                    <i class="far fa-address-card"></i>
+                        <div class="form-boton">
+                            <button class="btn-form registro" (click)="registrarUsuario()">
+                                Registrar
+                            </button>
+                        </div>
+                    </form>
                 </div>
-            </div>
-            <div class="seccion">
-                <div class="titulo-seccion">
-                    <h5>Iniciar sesión</h5>
-                </div>
-                <br>
-                <div class="inciar-con">
-                    <div class="form-boton">
-                        <button type="submit" class="btn-form facebook" (click)="loggearseFacebook()">
-                            <i class="fab fa-facebook-square"></i>
-                            facebook
-                        </button>
+                <div class="divisor">
+                    <div class="contenedor-icono">
+                        <i class="far fa-address-card"></i>
                     </div>
                 </div>
-                <form class="form-secion" action="#" method="post" accept-charset="utf-8">
-                    <div class="form-input">
-                        <input class="form-control" type="email" placeholder="Correo Electrónico">
-                        <div class="icono">
-                            <i class="fas fa-envelope"></i>
+                <div class="seccion">
+                    <div class="titulo-seccion">
+                        <h5>Iniciar sesión</h5>
+                    </div>
+
+                    <form class="form-secion" accept-charset="utf-8">
+
+                        <div class="form-floating mb-3">
+                            <input [(ngModel)]="usuarioLocal.correo" type="email" class="form-control" id="floatingInput"
+                                placeholder="Correo Electrónico" name="existingEmail">
+                            <label for="floatingInput">
+                                <i class="icono" class="fas fa-envelope"></i>
+                                Correo Electrónico</label>
                         </div>
-                    </div>
-                    <div class="form-input">
-                        <input class="form-control" type="password" placeholder="Contraseña" minlength="8">
-                        <div class="icono">
-                            <i class="fas fa-unlock"></i>
+                        <div class="form-floating">
+                            <input [(ngModel)]="usuarioLocal.pswd" type="password" class="form-control" id="floatingPassword" 
+                                placeholder="Contraseña" name="existingPassword">
+                            <label for="floatingPassword">
+                                <i class="icono" class="fas fa-unlock"></i>
+                                Contraseña</label><br>
                         </div>
-                    </div>
-                    <div class="form-boton">
-                        <button type="submit" class="btn-form iniciar">
-                            Iniciar
-                        </button>
-                    </div>
-                </form>
+
+                        <div class="form-boton">
+                            <button type="submit" class="btn-form iniciar" (click)="login()">
+                                Iniciar
+                            </button>
+                        </div> 
+                        <br>
+                        <div class="text-center">
+                            <p>o inicia sesión con</p>
+                        </div>
+
+                        <div class="inciar-con">
+                            <div class="form-boton">
+                                <button type="submit" class="btn-form facebook" (click)="loggearseFacebook()">
+                                    <i class="fab fa-facebook-square"></i>
+                                    Facebook
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
+        <div class="col-md-12 text-center">
+            <span>
+                &copy; 2022 SpaceTime, Inc.
+            </span>
+        </div>
     </div>
-    <div class="col-md-12 text-center">
-        <span>
-            &copy; 2022 SpaceTime, Inc.
-        </span>
-    </div>
-
 </body>
 
 </html>
