--- a/Front/src/app/perfil/perfil.component.css
+++ b/Front/src/app/perfil/perfil.component.css
@@ -12,7 +12,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    background: linear-gradient(#59758d, transparent);
+    background: linear-gradient(#d8d4d4, transparent);
     margin-bottom: 1.25rem;
 }
 
@@ -21,7 +21,7 @@
     position: relative;
     width: 90%;
     height: 17rem;
-    background-image: linear-gradient(45deg, #93cf05, #317FFF);
+    background-image: linear-gradient(45deg, #a5b64f, #555b55);
     border-radius: 0 0 20px 20px;
 }
 
@@ -42,7 +42,7 @@
 }
 
 .seccion-perfil-usuario .perfil-usuario-avatar img {
-    width: 100%;
+    width: 75%;
     position: relative;
     border-radius: 50%;
 }
@@ -52,7 +52,7 @@
     left: -2px;
     top: -2px;
     border: 0;
-    background-color: rgb(165, 152, 152);
+    background-color: rgb(92, 116, 210);
     box-shadow: 0 0 12px rgba(0, 0, 0, .2);
     width: 45px;
     height: 45px;
@@ -141,4 +141,46 @@
         justify-content: center
     }
 
+}
+
+
+.buscar{
+    position: relative;
+    padding: 0px;
+}
+
+.buscar input{
+    width: 0px;
+    height: 40px;
+    padding: 0 20px;
+    font-size: 18px;
+    color: #000;
+    outline: none;
+    border: 0px solid rgb(136, 133, 133);
+    border-radius: 10px;
+    transition: all 0.6s ease;
+}
+
+
+.bt{
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: #ffffff;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+    border-radius: 30%;
+    cursor: pointer;
+}
+
+.buscar:hover input{
+    width: 240px;
+}
+
+.buscar input:focus{
+    width: 240px;
 }
